# mslearn-oxford-image-classification-azure-sphere

./: README.md
CMSIS/NN/Tests/UnitTest/TestCases/TestData/conv_1_x_n_1/: input_data.h
CMSIS/NN/Tests/UnitTest/TestCases/test_arm_depthwise_conv_s8_opt/Unity/: unity_test_arm_depthwise_conv_s8_opt.c
CMSISNN-Cifar10/: CMakeLists.txt  README.md  linker.ld  main.c
CMSISNN-Cifar10/CMSIS/: ReadMe.txt
CMSISNN-Cifar10/CMSIS/CMSIS/NN/Tests/UnitTest/: requirements.txt
CMSISNN-Cifar10/CMSIS/CMSIS/NN/Tests/UnitTest/TestCases/TestData/conv_1_x_n_1/: output_shift_data.h
scripts/: .~lock.cifar-10-IMG_DATA.ipynb#  README.md  cifar-10-IMG_DATA.ipynb  requirements.txt
